--- a/package.json
+++ b/package.json
@@ -25,10 +25,20 @@
     "configuration": {
       "title": "Loop",
       "properties": {
-        "loop.azureApiKey": {
+        "loop.openaiApiKey": {
           "type": "string",
           "default": "",
-          "description": "Azure API Key used to call Azure OpenAI to generate code based on provided tests."
+          "markdownDescription": "OpenAI API Key used to call OpenAI to generate code based on provided tests. To generate a key, [see here](https://help.openai.com/en/articles/4936850-where-do-i-find-my-secret-api-key)",
+          "description": "OpenAI API Key used to call OpenAI to generate code based on provided tests."
+        },
+        "loop.model": {
+          "type": "string",
+          "default": "gpt-4",
+          "description": "Model to use for code generation",
+          "enum": [
+            "gpt-4",
+            "gpt-3-turbo"
+          ]
         }
       }
     }
@@ -42,16 +52,19 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.79.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
+    "@types/vscode": "^1.79.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "@vscode/test-electron": "^2.3.2",
     "eslint": "^8.41.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.3",
-    "@vscode/test-electron": "^2.3.2"
+    "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "openai": "^3.3.0"
   }
 }
