--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "loop",
   "description": "Test Driven GPT Code Generation",
   "version": "1.0.0",
+  "icon": "assets/logo-small.png",
   "engines": {
     "vscode": "^1.79.0"
   },
