--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Test Driven GPT Code Generation",
   "version": "1.0.0",
   "icon": "assets/logo-small.png",
+  "publisher": "thefatpanda97",
   "engines": {
     "vscode": "^1.79.0"
   },
