updated some configs

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
           "default": "gpt-3.5-turbo",
           "description": "Model to use for code generation",
           "enum": [
-            "gpt-4",
-            "gpt-3.5-turbo"
+            "gpt-3.5-turbo",
+            "gpt-4"
           ]
         }
       }
